JoinWebUI/Deployment/Production/Azure/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose-azure-docker-linux-net8.yml convert
    kompose.service.expose: joincloud.digicorp.it:27017
    kompose.service.type: NodePort
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
      nodePort: 32761
    - name: "27019"
      port: 27019
      targetPort: 27017
  selector:
    io.kompose.service: mongodb
  type: NodePort
status:
  loadBalancer: {}
