JoinWebUI/Deployment/Production/Azure/mongodb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose-azure-docker-linux-net8.yml convert
    kompose.service.expose: joincloud.digicorp.it:27017
    kompose.service.type: NodePort
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  rules:
    - host: joincloud.digicorp.it
      http:
        paths:
          - backend:
              service:
                name: mongodb
                port:
                  number: 27017
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
